[package]
name = "didcomm-messaging"
version = "0.1.0"
edition = "2021"

[dependencies]
did-utils.workspace = true
database.workspace = true
did-endpoint.workspace = true
keystore.workspace = true
shared.workspace = true
plugin-api.workspace = true
filesystem.workspace = true
message-api.workspace = true

# optional dependencies
forward = { workspace = true, optional = true }
pickup = { workspace = true, optional = true }
trust-ping = { workspace = true, optional = true }
discover-features = { workspace = true, optional = true }
mediator-coordination = { workspace = true, optional = true }

mongodb.workspace = true
didcomm.workspace = true
tracing.workspace = true
once_cell.workspace = true
serde_json.workspace = true
thiserror.workspace = true
http-body-util.workspace = true
tokio = { workspace = true, features = ["full"] }
hyper = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["macros"] }


[features]
default = [
    "routing",
    "pickup",
    "trust-ping",
    "discover-features",
    "mediator-coordination",
]

routing = ["dep:forward"]
pickup = ["dep:pickup"]
trust-ping = ["dep:trust-ping"]
discover-features = ["dep:discover-features"]
mediator-coordination = ["dep:mediator-coordination"]


[dev-dependencies]
async-trait.workspace = true
uuid = { workspace = true, features = ["v4"] }
json-canon = "0.1.3"
shared = { workspace = true, features = ["test-utils"] }
tokio = { version = "1.42.0", default-features = false, features = [
    "macros",
    "rt",
] }
tower = { version = "0.5.2", features = ["util"] }
