[package]
name = "health"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.33.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
mockall = "0.13.0"
tower = "0.4"
