[package]
name = "oob-messages"
version = "0.1.0"
edition = "2021"

[dependencies]
database.workspace = true
did-utils.workspace = true
did-endpoint.workspace = true
plugin-api.workspace = true

multibase.workspace = true
serde_json.workspace = true
axum.workspace = true
tracing.workspace = true
qrcode.workspace = true
image.workspace = true
base64.workspace = true
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["fast-rng", "v4"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
mongodb.workspace = true

[dev-dependencies]
tower = "0.5"
tokio = { version = "1.42.0", features = ["full"] }
did-endpoint = { workspace = true, features = ["test-utils"] }
