[package]
name = "did-utils" 
version = "0.1.0" 
authors = ["adorsys GmbH Co. KG"] 
license = "Apache-2.0"
description = "A Rust library for implementing reusable utility code for DID-based applications"
repository = "https://github.com/adorsys/didcomm-mediator-rs/tree/main/crates/web-plugins/didcomm-messaging/did-utils"
keywords = ["did-utils","didcomm", "didcomm-messaging"]
categories = ["cryptography", "decentralized-systems"]
edition = "2021"

[dependencies]
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
hyper = { workspace = true, features = ["client", "http2"] }
tokio.workspace = true
serde.workspace = true
hyper-tls.workspace = true

# Cross-platform random number generator from os
getrandom = { workspace = true, features = ["js"] }

# Cryptographic algorithms
ed25519-dalek.workspace = true
x25519-dalek = { workspace = true, features = ["static_secrets", "getrandom"] }
curve25519-dalek.workspace = true
sha2.workspace = true

# Utilities
lazy_static.workspace = true
async-trait.workspace = true
multibase.workspace = true
json-canon.workspace = true
thiserror.workspace = true
num-bigint.workspace = true
hex.workspace = true
url = { workspace = true, features = ["serde"] }
base64ct = { workspace = true, default-features = false, features = ["alloc"] }
zeroize = { workspace = true, default-features = false, features = [
    "alloc",
    "serde",
] }
subtle.workspace = true
regex.workspace = true

[dev-dependencies]
hyper = { version = "0.14.26", features = ["server"] }
async-std = { version = "1.12.0", features = ["attributes"] }
hex = "0.4.3"
tokio = { version = "1.27.0", default-features = false, features = [
    "macros",
    "rt",
] }
