[package]
name = "did-utils" 
version = "0.1.0" 
authors = ["adorsys GmbH Co. KG"] 
license = "Apache-2.0"
description = "A Rust library for implementing reusable utility code for DID-based applications"
repository = "https://github.com/adorsys/didcomm-mediator-rs/tree/main/crates/web-plugins/didcomm-messaging/did-utils"
keywords = ["did-utils","didcomm", "didcomm-messaging"]
categories = ["cryptography"]
edition = "2021"

[dependencies]
serde_json.workspace = true
tokio.workspace = true
serde.workspace = true
axum.workspace = true
hyper-tls.workspace = true
http-body-util.workspace = true
hyper-util ={ workspace = true, features = ["full"] }
hyper = { workspace = true, features = ["full"] }
chrono = { workspace = true, features = ["serde"] }

# Cross-platform random number generator from os
getrandom = { workspace = true, features = ["js"] }

# Cryptographic algorithms
ed25519-dalek.workspace = true
x25519-dalek = { workspace = true, features = ["static_secrets", "getrandom"] }
curve25519-dalek.workspace = true
sha2.workspace = true

# Utilities
lazy_static.workspace = true
async-trait.workspace = true
multibase.workspace = true
json-canon.workspace = true
thiserror.workspace = true
num-bigint.workspace = true
hex.workspace = true
url = { workspace = true, features = ["serde"] }
base64ct = { workspace = true, default-features = false, features = ["alloc"] }
zeroize = { workspace = true, default-features = false, features = [
    "alloc",
    "serde",
] }
subtle.workspace = true
regex.workspace = true

[dev-dependencies]
hyper = { version = "1.5.2", features = ["server"] }
async-std = { version = "1.13.0", features = ["attributes"] }
hex = "0.4.3"
tokio = { version = "1.42.0", default-features = false, features = [
    "macros",
    "rt",
] }
