[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
did-utils.workspace = true
database.workspace = true
filesystem = { workspace = true, features = ["test-utils"] }
keystore = { workspace = true, features = ["test-utils"] }

json-canon.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
mongodb.workspace = true
hyper = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["macros"] }
didcomm = { workspace = true, features = ["uniffi"] }

[dev-dependencies]
hyper = "0.14.27"
tokio = { version = "1.27.0", default-features = false, features = [
    "macros",
    "rt",
] }
json-canon = "0.1.3"

[features]
test-utils = []
