[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
did-utils.workspace = true
database.workspace = true
keystore = { workspace = true, features = ["test-utils"] }

json-canon.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
mongodb.workspace = true
eyre.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
pin-project-lite.workspace = true
tokio = { workspace = true, features = ["full"] }
didcomm = { workspace = true, features = ["uniffi"] }

[dev-dependencies]
json-canon = "0.1.3"
tokio = { version = "1.42.0", default-features = false, features = [
    "macros",
    "rt",
] }

[features]
test-utils = []
