[package]
name = "basic-message"
version = "0.1.0"
edition = "2021"

[dependencies]
shared.workspace = true

serde.workspace = true
didcomm.workspace = true
mongodb.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["v4"] }
axum = { workspace = true, features = ["macros"] }

[dev-dependencies]
hyper = "0.14.27"
chrono = "0.4.26"
shared = { workspace = true, features = ["test-utils"] }
tokio = { version = "1.27.0", default-features = false, features = [
    "macros",
    "rt",
] }
