[package]
name = "mediator-coordination"
version = "0.1.0"
edition = "2021"

[dependencies]
shared.workspace = true
did-utils.workspace = true
message-api.workspace = true

mongodb.workspace = true
multibase.workspace = true
serde.workspace = true
paste.workspace = true
async-trait.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
json-canon.workspace = true
didcomm = { workspace = true, features = ["uniffi"] }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["macros"] }
uuid = { workspace = true, features = ["v4"] }
hyper = { workspace = true, features = ["full"] }


[dev-dependencies]
hyper = "1.5.2"
json-canon = "0.1.3"
tokio = { version = "1.42.0", default-features = false, features = [
    "macros",
    "rt",
] }
shared = { workspace = true, features = ["test-utils"] }

[features]
default = ["stateful"]
stateful = []
stateless = []
